# blackjack

./: .gitignore  .importlinter  .pre-commit-config.yaml  .quality_gate.conf  AGENTS.md  AGENTS_TS.md  ARCHITECTURE.md  AUDIT_REPORT.md  BLACKJACK_PROJECT.md  GEMINI.md  GLM_PR.md  ISSUE.md  KIMI.md  Makefile  PRODUCTION_MANDATE .md  PRODUCTION_MANDATE.md  README.md  REPOSITORY_AUDIT_2026-04-03.md  SECURITY.md  SEC_AUDIT.md  WORKFLOW.md  blackjack.desktop  jules_report.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  quality_gate.sh  requirements-dev.txt  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e-tests.yml  health-check.yml  pre-commit.yml  weekly-security-scan.yml
blackjack-toolkit/: .quality_gate.conf  AGENTS_TS.md  Makefile  README.md  quality_gate.sh  vitest.config.ts
code-health-toolkit-v4/: .gitignore  .importlinter  .pre-commit-config.yaml  .quality_gate.conf  Makefile  README.md  pyproject.toml  quality_gate.sh  requirements-dev.txt
code-health-toolkit-v4/frontend-configs/: eslint.config.js
docs/: ARCHITECTURE_AUDIT_CURRENT_STATE_2026-04-05.md  CODEX.md  GLM5.md  MINI25.md  jules_report.md
docs/audit/: PROMPT0_MAP_mistral-medium-3.5_2025-04-30.md  PROMPT1_LOGIC_mistral-medium-3.5_2025-04-30.md  PROMPT2_SECURITY_mistral-medium-3.5_2025-04-30.md  PROMPT3_OPTIM_MistralVibe_2026-04-30.md  PROMPT5_VERIFY_mistral-medium-3.5_2026-01-18.md
e2e/: game-flow.spec.ts
scripts/: launch_desktop.sh
src/: App.css  App.tsx  index.css  test-utils.ts
src/assets/sounds/: README.md
src/components/: ErrorBoundary.tsx
src/components/Avatar/: Avatar.css  DealerAvatar.tsx  PlayerAvatar.tsx  index.ts
src/components/Card/: Card.css  Card.tsx  CardAnimations.css  CardAnimations.tsx  CardFlip.css  CardFlip.tsx  Hand.css  Hand.tsx
src/components/Chip/: Chip.css  Chip.tsx  ChipAnimations.css  ChipAnimations.tsx  ChipStack.css  ChipStack.tsx
src/components/Table/: BettingArea.css  BettingArea.tsx  BlackjackTable.css  BlackjackTable.test.tsx  BlackjackTable.tsx  DealerArea.css  DealerArea.tsx  PlayerArea.css  PlayerArea.tsx
src/components/UI/: ActionButtons.css  ActionButtons.tsx  Balance.css  Balance.tsx  ChipSelector.css  ChipSelector.tsx  GameResult.css  GameResult.tsx  InsuranceDialog.css  InsuranceDialog.tsx  SoundSettings.css  SoundSettings.tsx
src/constants/: animations.ts
src/hooks/: index.ts  useGameAnimations.ts  useSound.ts
src/logic/: deck.test.ts  deck.ts  hand.test.ts  hand.ts  rules.helpers.test.ts  rules.test.ts  rules.ts
src/store/: gameHelpers.test.ts  gameHelpers.ts  gameStore.insurance.test.ts  gameStore.test.ts  gameStore.ts  validators.test.ts  validators.ts
src/types/: index.ts
