# =============================================================================
# CODE HEALTH TOOLKIT - MERGED EDITION v3.2
# v2.2 Ruff-alapok + Solo kiegészítések (architecture, trends, dead code)
# =============================================================================

[project]
name = "my-project"  # ← Cseréld a projekt nevére
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    # === LINTING & FORMATTING ===
    "ruff>=0.8.0",
    "mypy>=1.8.0",

    # === TESTING ===
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mutmut>=2.4",              # Mutation testing

    # === COMPLEXITY & METRICS ===
    "radon>=5.0,<6",            # Complexity analysis (xenon kompatibilis)
    "xenon>=0.9",               # Complexity gate
    "wily>=1.25",               # Historical trends

    # === ARCHITECTURE ===
    "import-linter>=2.0",       # Clean Architecture enforcement

    # === CODE QUALITY ===
    "vulture>=2.11",            # Dead code detection
    "bandit>=1.7.7",            # Security scanning

    # === SECRETS ===
    "detect-secrets>=1.4",

    # === DEV TOOLS ===
    "pre-commit>=3.7",
]

# =============================================================================
# RUFF - Fast linter & formatter (10-100x faster than pylint)
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "app", "tests"]
exclude = [
    ".venv", "venv", "env", ".env", "virtualenv",
    "__pycache__", ".git", ".mypy_cache", ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",          # Pyflakes
    "I",          # isort
    "B",          # flake8-bugbear
    "UP",         # pyupgrade
    "SIM",        # flake8-simplify
    "RUF",        # Ruff-specific
    "C90",        # mccabe complexity
    "C4",         # flake8-comprehensions
    "ARG",        # unused-arguments
    "PTH",        # flake8-use-pathlib
    "ERA",        # commented-out code
    "PERF",       # Perflint
    "PL",         # Pylint rules in Ruff
    "D101", "D102", "D103", "D107",  # docstrings (class, method, function, __init__)
]
ignore = [
    "E501",       # line too long (formatter handles it)
    "B008",       # function call in default argument (PySide6 Signal)
    "SIM108",     # ternary operator (readability preference)
    "PLR0913",    # too many arguments (use max-args below)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5                  # Function signature clean-up
max-branches = 12
max-statements = 40

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "D"]
"conftest.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# MYPY - Type checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false     # Nem kötelező mindenhol típus
check_untyped_defs = true         # De a törzsét ellenőrizze
ignore_missing_imports = true     # 3rd party libek miatt
show_error_codes = true
no_implicit_optional = true
exclude = ["^.venv/", "^venv/", "^env/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# PYTEST & COVERAGE
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    # NOTE: --cov és --cov-fail-under a quality_gate.sh-ban dinamikusan,
    # itt csak pytest-hez közvetlenül (make test) tartjuk
]
markers = [
    "slow: marks tests as slow (skip with -m 'not slow')",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src", "app"]
branch = true
omit = ["tests/*", "*/__init__.py", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# VULTURE - Dead code detection
# =============================================================================
[tool.vulture]
min_confidence = 80
paths = ["src", "app"]
exclude = ["tests/", "venv/", ".venv/"]

# =============================================================================
# MUTMUT - Mutation testing
# =============================================================================
[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "pytest -x --tb=no -q"

# =============================================================================
# BANDIT - Security
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # assert OK
